Fixed some SonarQube Linter error and bugs